add docker node server with dependencies example

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -4,9 +4,18 @@ FROM node:12-stretch
 # node container has a node user, along with the root one
 USER node
 
+RUN mkdir /home/node/code
+
 WORKDIR /home/node/code
 
-COPY --chown=node:node index.js .
+# first copy files used to install dependencies
+COPY --chown=node:node package.json yarn.lock ./
+
+# install dependencies (re-install only if the prevous 2 files changed)
+RUN yarn
+
+# copy all file (except the onese listed in .dockerignore)
+COPY --chown=node:node . .
 
 CMD ["node", "index.js"]
  
